@@ -1,3 +1,5 @@
+2006/7/4 -- released version 20060704_trunk
+
 * new feature to color the graph background in sync with the loss -- grahame.bo
 * new probe JunOS Telnet ping -- Shan Ali Khan shanali *singtel.com
 
